@@ -4,16 +4,24 @@ import net.minecraft.client.renderer.entity.EntityRendererProvider.Context;
 import net.minecraft.client.renderer.entity.MobRenderer;
 import net.minecraft.resources.ResourceLocation;
 import willatendo.fossilslegacy.client.FossilsLegacyModelLayers;
-import willatendo.fossilslegacy.client.model.dinosaur.legacy.TriceratopsModel;
+import willatendo.fossilslegacy.client.model.dinosaur.FutabasaurusModel;
+import willatendo.fossilslegacy.client.model.dinosaur.TriceratopsModel;
+import willatendo.fossilslegacy.client.model.dinosaur.legacy.LegacyFutabasaurusModel;
+import willatendo.fossilslegacy.client.model.dinosaur.legacy.LegacyTriceratopsModel;
 import willatendo.fossilslegacy.server.entity.Triceratops;
 
-public class TriceratopsRenderer extends MobRenderer<Triceratops, TriceratopsModel> {
+public class TriceratopsRenderer extends LegacyEntityRenderer<Triceratops> {
     public TriceratopsRenderer(Context context) {
-        super(context, new TriceratopsModel(context.bakeLayer(FossilsLegacyModelLayers.TRICERATOPS)), 0.15F);
+        super(context, new TriceratopsModel(context.bakeLayer(FossilsLegacyModelLayers.TRICERATOPS.getFirst())), new LegacyTriceratopsModel(context.bakeLayer(FossilsLegacyModelLayers.TRICERATOPS.getSecond())), 0.3F);
     }
 
     @Override
-    public ResourceLocation getTextureLocation(Triceratops triceratops) {
+    protected ResourceLocation legacyTextureLocation(Triceratops triceratops) {
+        return triceratops.legacyTextures()[triceratops.getSubSpecies()][triceratops.isBaby() ? 1 : 0];
+    }
+
+    @Override
+    protected ResourceLocation textureLocation(Triceratops triceratops) {
         return triceratops.textures()[triceratops.getSubSpecies()][triceratops.isBaby() ? 1 : 0];
     }
 }
