@@ -1,4 +1,4 @@
-mod_version=1.3.3
+mod_version=1.4.0
 mod_version_name=Hotfix - 1.3.3
 group=willatendo.fossilslegacy
 java_version=21
